# GNSS-R-DDM-Simulator

./: .gitignore  README.md  install.md  install.sh  python-pkgs.md  python_package.txt  python_packages.txt
doc/: build_doc.sh
doc/source/: conf.py  index.rst
src/: cygnss_netCDF.ipynb  netCDF.ipynb  setup.py  tds_netCDF.ipynb
src/cygnss/disimone/: detection.py
src/cygnss/lat_lon_search/: kmz_search.py  kmz_search_output.txt  lat_lon_search_output.txt
src/di_simone/: DD2SRF_test.m  myDD2SRF_v1.m
src/email/: send.py
src/geros/: geros.ipynb
src/geros/raw/: L1_OUTPUT_M5_SCAT.mat
src/gnssr/: Untitled.ipynb  targets.py  utils.py
src/gnssr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/gnssr/cygnss/: cygnss_netCDF.ipynb
src/gnssr/isolines/: haps.py  iso_lines.py  tds.py
src/gnssr/math_lib/: math_lib.py  utils.py
src/gnssr/prn_code/: ca.py
src/gnssr/requirements/: t_coherent.py
src/tcp_communication/: socket_echo_client.py  socket_echo_server.py
src/tds/: tds_ddm.ipynb  tds_netCDF.ipynb
src/wavpy/wavpy-1.0/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
src/wavpy/wavpy-1.0/src/: Makefile.am  MultiRaySingleRefl_model.cc  MultiRaySingleRefl_model.h  Surface_routines.f90  ZavorotnyVoronovichModel.cc  ZavorotnyVoronovichModel.h  ancillary_functions.cc  ancillary_functions.h  compute_delays_wav.cc  compute_delays_wav.h  gnss_composite.cc  gnss_composite.h  reflecting_surface.cc  reflecting_surface.h  rf_front_end.cc  rf_front_end.h  specular_geometry.cc  specular_geometry.h  waveform_complex.cc  waveform_complex.h  waveform_power.cc  waveform_power.h  wavpy_global_variables.h
src/wavpy/wavpy-1.0/wavpy/: Makefile.am  wavpy.i
src/wavpy/wavpy-1.0/wavpy/test/: DDM_norm_Test_model_TDS1case_REF.txt  Test_model_TDS1case.py
(+218 files in other folders)
